# demo-mavlink-testapp

./: .gitignore  .gitmodules  CMakeLists.txt  INSTALL.md  README.md  airsim-settings.json  demo_exercise.camkes  demo_mavlink_testapp.camkes  run_qemu.sh  system_config.h
components/ChanMux/: ChanMux_config.c
components/FCAdapter/: CMakeLists.txt  FCAdapter.camkes  if_FCAdapter.camkes
components/FCAdapter/camkes/: FCAdapter.camkes  if_FCAdapter.camkes
components/FCAdapter/client/include/: FCAdapter_client.h  if_FCAdapter.h
components/FCAdapter/client/src/: FCAdapter_client.c
components/FCAdapter/server/src/: FCAdapter.c
components/FCAdapter/src/: FCAdapter.c
components/PingClient/: ping_client.c
components/TestApp/: TestApp.camkes
components/TestApp/src/: TestApp.c
overlay_files/init_scripts/: ping_test
plat/jetson-nano-2gb-dev-kit/: plat.camkes  plat.cmake
plat/qemu-arm-virt/: plat.camkes  plat.cmake
plat/sabre/: plat_nic.camkes  plat_nic.cmake
scripts/: download_external_software_required.sh  remove-tables.sh  setup-flight-demo  setup-tables.sh
